# SiberSelma

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  README.md  api_server.py  fetch_wiki_sources.py  ingest.py  rapor.md  requirements.txt  server.py  setup.ps1  web_ui.py  wiki_schema.md
.github/workflows/: ci.yml
.obsidian/: graph.json  workspace.json
docs/wiki/: Awesome_Security_Repos.md  Cloud_Security_AWS_GCP_Azure.md  Data_Structure.md  Docker_Container_Security.md  Index.md  (+26 more)
docs/wiki/PentestGPT-main/PentestGPT-main/: .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  fix-workspace-permissions.sh  pyproject.toml  setup.sh
docs/wiki/PentestGPT-main/PentestGPT-main/.github/workflows/: ci.yml
docs/wiki/PentestGPT-main/PentestGPT-main/benchmark/: README.md
docs/wiki/PentestGPT-main/PentestGPT-main/benchmark/standalone-xbow-benchmark-runner/: .gitignore  README.md  USAGE.md  requirements.txt  run_benchmarks.py
docs/wiki/PentestGPT-main/PentestGPT-main/benchmark/standalone-xbow-benchmark-runner/results/: dec-2025.md
docs/wiki/PentestGPT-main/PentestGPT-main/benchmark/standalone-xbow-benchmark-runner/src/: __init__.py  benchmark_runner.py  docker_manager.py  models.py  output_parser.py  pentestgpt_executor.py  reporter.py  state_manager.py
docs/wiki/PentestGPT-main/PentestGPT-main/benchmark/standalone-xbow-benchmark-runner/tests/: __init__.py  test_output_parser.py
docs/wiki/PentestGPT-main/PentestGPT-main/demo/: README.md  demo.cast  install.cast
docs/wiki/PentestGPT-main/PentestGPT-main/legacy/: README.md  pyproject.toml  setup.py
docs/wiki/PentestGPT-main/PentestGPT-main/legacy/benchmark/: README.md  evaluator.py  pentestTarget.py
docs/wiki/PentestGPT-main/PentestGPT-main/legacy/pentestgpt/: _version.py  main.py  test_connection.py
docs/wiki/PentestGPT-main/PentestGPT-main/legacy/pentestgpt/llm_generation/: config.py  conversation_manager.py  task_processor.py
docs/wiki/PentestGPT-main/PentestGPT-main/legacy/pentestgpt/llm_generation/models/: __init__.py  anthropic_official.py  data_structure.py  deepseek.py  gemini.py  jina.py  open_ai.py  perplexity.py
docs/wiki/PentestGPT-main/PentestGPT-main/legacy/pentestgpt/utils/APIs/: module_import.py  ollama_api.py
docs/wiki/PentestGPT-main/PentestGPT-main/pentestgpt/: __init__.py
docs/wiki/PentestGPT-main/PentestGPT-main/pentestgpt/benchmark/: __init__.py  cli.py  config.py  docker.py  registry.py
docs/wiki/PentestGPT-main/PentestGPT-main/pentestgpt/core/: agent.py  backend.py  config.py  controller.py  events.py  langfuse.py  session.py  tracer.py
docs/wiki/PentestGPT-main/PentestGPT-main/pentestgpt/interface/: main.py  styles.tcss  tui.py
docs/wiki/PentestGPT-main/PentestGPT-main/pentestgpt/interface/components/: activity_feed.py  renderers.py  splash.py
docs/wiki/PentestGPT-main/PentestGPT-main/pentestgpt/prompts/: pentesting.py
docs/wiki/PentestGPT-main/PentestGPT-main/pentestgpt/tools/: base.py  registry.py
docs/wiki/PentestGPT-main/PentestGPT-main/scripts/: ccr-config-template.json  config.sh  entrypoint.sh
docs/wiki/PentestGPT-main/PentestGPT-main/tests/: __init__.py  conftest.py
docs/wiki/PentestGPT-main/PentestGPT-main/tests/docker/: __init__.py  test_container_health.py  test_docker_build.py
docs/wiki/PentestGPT-main/PentestGPT-main/tests/integration/: __init__.py  test_benchmark_cli.py  test_controller.py
docs/wiki/PentestGPT-main/PentestGPT-main/tests/unit/: __init__.py  test_backend_interface.py  test_benchmark_registry.py  test_config.py  test_events.py  test_flag_detection.py  test_langfuse.py  test_session.py
tests/: test_patterns.py
(+34 files in other folders)
